[gd_scene load_steps=4 format=3 uid="uid://dot217uns2n3s"]

[ext_resource type="Script" path="res://scenes/pop_folklore.gd" id="1_c4axo"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="2_3m0aw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e2hqn"]
shader = ExtResource("2_3m0aw")
shader_parameter/lod = 1.728

[node name="PopUpFolklore" type="CanvasLayer"]
script = ExtResource("1_c4axo")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_e2hqn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopUpVBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FolkoreIcon" type="TextureRect" parent="PopUpVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 4

[node name="FolkloreName" type="Label" parent="PopUpVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="FolkloreDescription" type="RichTextLabel" parent="PopUpVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true

[node name="Exit" type="Button" parent="PopUpVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Ok"
